# mine_explorer

./: .gitignore  README.md
arm_mine_explorer/: README.md
arm_mine_explorer/arm_mine_explorer_description/: CMakeLists.txt  README.md  package.xml
arm_mine_explorer/arm_mine_explorer_description/config/: joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
arm_mine_explorer/arm_mine_explorer_description/launch/: display.launch.py
arm_mine_explorer/arm_mine_explorer_description/test/: test_launch_integration.py  test_robot_structure.py  test_urdf_format.py
arm_mine_explorer/arm_mine_explorer_description/urdf/: robot.urdf.xacro
arm_mine_explorer/arm_mine_explorer_description/urdf/arm/: arm.gazebo.xacro  arm.ros2_control.xacro  arm.xacro  arm_model_data.xacro
arm_mine_explorer/arm_mine_explorer_gazebo/: CMakeLists.txt  README.md  package.xml
arm_mine_explorer/arm_mine_explorer_gazebo/config/: gazebo_controller_manager.yaml
arm_mine_explorer/arm_mine_explorer_gazebo/launch/: gazebo.launch.py
arm_mine_explorer/arm_mine_explorer_gazebo/test/: test_gazebo_config.py  test_gazebo_launch.py
base_mine_explorer/: README.md
base_mine_explorer/base_mine_explorer_description/: CMakeLists.txt  README.md  package.xml
base_mine_explorer/base_mine_explorer_description/launch/: display.launch.py
base_mine_explorer/base_mine_explorer_description/rviz/: model.rviz
base_mine_explorer/base_mine_explorer_description/test/: test_launch_integration.py  test_robot_structure.py  test_urdf_format.py
base_mine_explorer/base_mine_explorer_description/urdf/: robot.urdf.xacro
base_mine_explorer/base_mine_explorer_description/urdf/mobile_base/: decorations.urdf.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  wheel.urdf.xacro
base_mine_explorer/base_mine_explorer_gazebo/: CMakeLists.txt  README.md  package.xml
base_mine_explorer/base_mine_explorer_gazebo/config/: gazebo_controller_manager.yaml
base_mine_explorer/base_mine_explorer_gazebo/launch/: gazebo.launch.py
base_mine_explorer/base_mine_explorer_gazebo/test/: test_gazebo_config.py  test_gazebo_launch.py
mine_explorer/: README.md
mine_explorer/mine_explorer_bringup/: CMakeLists.txt  README.md  package.xml
mine_explorer/mine_explorer_bringup/launch/: bringup_mine_slam2d_ekf.launch.py
mine_explorer/mine_explorer_bringup/test/: test_integration_slam2d_ekf.py
mine_explorer/mine_explorer_control/: CMakeLists.txt  README.md  package.xml
mine_explorer/mine_explorer_control/config/: ekf.yaml
mine_explorer/mine_explorer_control/launch/: localization.launch.py
mine_explorer/mine_explorer_control/scripts/: compute_variances.py
mine_explorer/mine_explorer_control/test/: test_ekf_launch.py
mine_explorer/mine_explorer_description/: CMakeLists.txt  README.md  package.xml
mine_explorer/mine_explorer_description/launch/: display.launch.py
mine_explorer/mine_explorer_description/rviz/: model.rviz  model_with_sensors.rviz
mine_explorer/mine_explorer_description/test/: test_launch_integration.py  test_robot_structure.py  test_urdf_format.py
mine_explorer/mine_explorer_description/urdf/: robot.urdf.xacro
mine_explorer/mine_explorer_gazebo/: CMakeLists.txt  README.md  package.xml
mine_explorer/mine_explorer_gazebo/config/: gazebo_controller_manager.yaml
mine_explorer/mine_explorer_gazebo/launch/: gazebo.launch.py
mine_explorer/mine_explorer_gazebo/test/: test_gazebo_config.py  test_gazebo_launch.py
mine_explorer/mine_explorer_mapping/: CMakeLists.txt  README.md  package.xml
mine_explorer/mine_explorer_mapping/config/: slam_2d_params.yaml
mine_explorer/mine_explorer_mapping/launch/: slam_2d.launch.py
mine_explorer/mine_explorer_mapping/test/: test_slam_2d_integration.py
mine_explorer/mine_explorer_resources/: package.xml  setup.cfg  setup.py
mine_explorer/mine_explorer_resources/src/mine_explorer_resources/: robot_mover.py
mine_explorer/mine_explorer_resources/trajectories/: trajectory_1.yaml
mine_explorer/mine_explorer_resources/worlds/: world_1.world
sensors_mine_explorer/: README.md
sensors_mine_explorer/sensors_mine_explorer_description/: CMakeLists.txt  README.md  package.xml
sensors_mine_explorer/sensors_mine_explorer_description/launch/: camera_d435_display.launch.py  camera_d455_display.launch.py  lidar_hdl32e_display.launch.py  lidar_vlp16_display.launch.py
sensors_mine_explorer/sensors_mine_explorer_description/rviz/: camera_d435_model.rviz  camera_d455_model.rviz  lidar_model.rviz
sensors_mine_explorer/sensors_mine_explorer_description/test/camera/: test_d435_gazebo_launch.py  test_d435_launch_integration.py  test_d435_urdf_format.py  test_d455_gazebo_launch.py  test_d455_launch_integration.py  test_d455_urdf_format.py
sensors_mine_explorer/sensors_mine_explorer_description/test/lidar/: test_hdl32e_gazebo_launch.py  test_hdl32e_launch_integration.py  test_hdl32e_urdf_format.py  test_vlp16_gazebo_launch.py  test_vlp16_launch_integration.py  test_vlp16_urdf_format.py
sensors_mine_explorer/sensors_mine_explorer_description/urdf/camera/: d435_standalone.urdf.xacro  d455_standalone.urdf.xacro  realsense_all.xacro  realsense_d435.xacro  realsense_d455.xacro
sensors_mine_explorer/sensors_mine_explorer_description/urdf/camera/common/: _materials.urdf.xacro  _usb_plug.urdf.xacro  realsense_gazebo.xacro
sensors_mine_explorer/sensors_mine_explorer_description/urdf/imu/: imu.xacro
sensors_mine_explorer/sensors_mine_explorer_description/urdf/lidar/: hdl32e_standalone.urdf.xacro  velodyne_hdl32e.xacro  velodyne_vlp16.xacro  vlp16_standalone.urdf.xacro
sensors_mine_explorer/sensors_mine_explorer_description/urdf/sonar/: maxbotix_lv_ez.xacro
