<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_mine_explorer_gazebo</name>
  <version>0.0.0</version>
  <description>arm_mine_explorer_gazebo ROS 2 package</description>
  <maintainer email="theo.morel195@gmail.com">Théo Morel</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>arm_mine_explorer_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
