<?xml version="1.0"?>
<package format="3">
  <name>mine_explorer_control</name>
  <version>0.0.0</version>
  <description>Control and Localiztion Package for Mine Explorer Robot (EKF)</description>
  <maintainer email="theo.morel195@gmail.com">Théo Morel</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
