<?xml version="1.0"?>
<package format="3">
  <name>mine_explorer_control</name>
  <version>0.0.0</version>
  <description>Control and Localiztion Package for Mine Explorer Robot (EKF)</description>
  <maintainer email="theo.morel195@gmail.com">Théo Morel</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>mine_explorer_gazebo</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
