<?xml version="1.0"?>
<package format="3">
  <name>mine_explorer_description</name>
  <version>0.0.0</version>
  <description>URDF/xacro description of the Mine Explorer robot (mobile base + arm + sensors)</description>
  <maintainer email="theo.morel195@gmail.com">Théo Morel</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>arm_mine_explorer_description</exec_depend>
  <exec_depend>base_mine_explorer_description</exec_depend>
  <exec_depend>sensors_mine_explorer_description</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>urdfdom_py</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
