<?xml version="1.0"?>
<package format="3">
  <name>mine_explorer_mapping</name>
  <version>0.0.0</version>
  <description>Mapping and Localization Package</description>
  <maintainer email="theo.morel195@gmail.com">Théo Morel</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>mine_explorer_gazebo</test_depend>
  <test_depend>mine_explorer_resources</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
