<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mine_explorer_resources</name>
  <version>0.0.0</version>
  <description>Shared worlds and trajectory scripts for Mine Explorer project</description>
  <maintainer email="theo.morel195@gmail.com">Théo Morel</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    
    <ament_index_python>
      <share>
        <directory>worlds</directory>
        <directory>trajectories</directory>
      </share>
    </ament_index_python>
  </export>

</package>
